[package]
name = "test_raftstore"
version = "0.0.1"
publish = false

[dependencies]
tikv = { path = "../.." }
tikv_log = { path = "../tikv_log" }
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
rocksdb = { git = "https://github.com/pingcap/rust-rocksdb.git" }
protobuf = "~2.0"
tempdir = "0.3"
raft = "0.4"
futures = "0.1"
tokio-timer = "0.2"
tokio = "0.1"
grpcio = { version = "0.4", features = [ "secure" ] }
rand = "0.3"
slog = "2.4"
